src/components/AcidRain/AcidRainModal/index.css
@keyframes animate-height {
  from {
    transform: scaleY(0);
  }
  to {
    transform: scaleY(1);
  }
}

@keyframes fade-in {
  from {
    opacity: 0.1;
  }
  to {
    opacity: 1;
  }
}

.acid_rain_modal {
  animation: animate-height 0.55s;
  position: relative;
  width: 80vw;
  height: 80vh;
  border: 3px solid #b1b2ff;
  border-radius: 10px;
  background-color: #eef1ff;
  overflow: hidden;
}
.acid_rain_init_contents {
  position: relative;
  width: inherit;
  height: inherit;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: center;
  column-gap: 0px;
}

.acid_rain_title {
  font-size: 50px;
  cursor: pointer;
  margin-top: 5vh;
  margin-bottom: 0;
}

.acid_rain_contents {
  animation: fade-in 1s;
  width: inherit;
  height: inherit;
  display: flex;
  justify-content: center;
}
.acid_rain_top_row {
  position: absolute;
  width: fit-content;
  left: 50%;
  top: 0;
  transform: translate(-50%);
  display: flex;
}
.acid_rain_input {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 250px;
  height: 30px;
  font-size: 24px;
  text-align: center;
  border: 3px solid black;
  outline: none;
  border-radius: 10px;
}

.limit {
  position: absolute;
  left: 0;
  bottom: 0;
  width: inherit;
  height: 10vh;
  background-color: #b1b2ff;
}
.acid_rain_start_button {
  font-size: 1.5rem;
  height: 50px;
  width: 200px;
  margin-bottom: 5vh;
}

.level_button {
  margin: 0 10px;
  width: 60px;
  padding: 8px;
  background-color: #b1b2ff;
  border: 2px solid #b1b2ff;
  border-radius: 10px;
  color: white;
}
.level_button:focus {
  background-color: white;
  color: #b1b2ff;
}
.level_button:hover {
  filter: brightness(1);
}
.level_button:active {
  background-color: white;
  color: #b1b2ff;
}
.select_language_item {
  width: 60px;
  padding: 8px;
  background-color: #b1b2ff;
  border: 2px solid #b1b2ff;
  border-radius: 10px;
  color: white;
  &.item_active {
    background-color: white;
    color: #b1b2ff;
  }
}

.select_language_item:hover {
  background-color: #b1b2ff;
  color: white;
}

.select_language_item:active {
  background-color: #8468fa;
  border: 2px solid #8468fa;
}

.acid_rain_result {
  position: absolute;
  font-size: 22px;
  right: 150px;
  bottom: 50%;
  transform: translate(50%, 50%);
}

.acid_rain_info_table {
  width: 500px;
  font-size: 20px;
  border-collapse: collapse;
  border-spacing: 10px;
}
.acid_rain_info_title {
  font-size: 40px;
  font-weight: 700;
  margin-bottom: 20px;
}
.acid_rain_info_table td,
.acid_rain_info_table th {
  width: 150px;
  padding: 12px;
  text-align: center;
  border-bottom: 1px solid #ddd;
  white-space: nowrap; /* 텍스트 줄바꿈 방지 */
}

.acid_rain_level {
  position: absolute;
  left: 30px;
  top: 20px;
  font-size: 26px;
  font-weight: 700;
  background-color: #b1b2ff;
  border-radius: 10px;
  width: 100px;
  height: 50px;
  line-height: 50px;
}

.acid_rain_exit_button {
  position: absolute;
  top: 15px;
  right: 20px;
  width: 30px;
  cursor: pointer;
}

